Modificado para mostrar mas detalles